--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ streamlit==1.33.0
 langchain-community==0.2.0
 faiss-cpu==1.8.0
 pdf2image==1.17.0
+git-lfs==1.6
+file-chat-input==0.0.2
+streamlit-float==0.3.4
